[package]
name = "vapr-desktop"
version = "1.11.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "vapr_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["stream", "json"] }
futures-util = "0.3"
zip = "0.6"
dirs = "5.0"
chrono = "0.4"
semver = "1.0"
tokio-tungstenite = "0.24"
tungstenite = "0.24"
uuid = { version = "1.10", features = ["v4", "serde"] }
